@@ -1,5 +1,41 @@
 <?php
 
+function search_omdb_by_title($title, $year)
+{
+    global $cache;
+
+    $apikey = $_ENV['OMDB_API_KEY'];
+
+    if (empty($apikey)) {
+        return null;
+    }
+
+    $hash = hash('sha256', $title . $year);
+    $omdb_data = $cache->get('omdb_' . $hash);
+    if ($omdb_data === false || is_null($omdb_data)) {
+        $url = "http://www.omdbapi.com/?apikey=$apikey&t=" . urlencode($title) . "&y=" . urlencode($year) . "&plot=full";
+        $content = fetch($url);
+        if (!$content) {
+            return false;
+        }
+        $omdb_data = json_decode($content, true);
+        if (!empty($omdb_data)) {
+            if (!empty($omdb_data['Poster'])) {
+                $imdbid = $omdb_data['imdbID'];
+                $insert = $cache->get('insert_imdb_imdbid_' . $imdbid);
+                if ($insert === false || is_null($insert)) {
+                    $sql = "INSERT IGNORE INTO images (imdb_id, url, type) VALUES ('$imdbid', '{$omdb_data['Poster']}', 'poster')";
+                    sql_query($sql) or sqlerr(__FILE__, __LINE__);
+                    $cache->set('insert_imdb_imdbid_' . $imdbid, 0, 604800);
+                }
+            }
+            $cache->set('omdb_' . $hash, $omdb_data, 604800);
+        }
+    }
+
+    return $omdb_data;
+}
+
 function get_omdb_info($imdbid, $title = true)
 {
     global $cache;
@@ -18,7 +54,7 @@ function get_omdb_info($imdbid, $title = true)
             return false;
         }
         $omdb_data = json_decode($content, true);
-        if (!empty($json)) {
+        if (!empty($omdb_data)) {
             $cache->set('omdb_' . $imdbid, $omdb_data, 604800);
         }
     }
